--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
    <title>Getting Started with SASS </title>
    <link rel="stylesheet" href="app.css">
  </head>
- <body>
+ <body class="main">
    <p>This is my page</p>
    <h1>Hi there!</h1>
    <h2>Font Check. </h2>
    <h3>Another Check. </h3>
    <h5>Logical Check. </h5>
    <h6></h6>
+   <a href="#">Anchor here</a>
+   <section class="shadows">
+     Box Shadow
+   </section>
  </body>
